Couche identité Keycloak : corrections de compilation, fiabilisation, tests et documentation (#11)
* fix: corrige les erreurs de compilation de la couche Keycloak

- imports manquants ou erronés (UtilisateurWriteDTO, List, Optional, UUID,
  Set, Map, IdentiteUtilisateur, IdentiteCommande, NotEmpty,
  lombok.extern.slf4j.Slf4j, LinkedMultiValueMap/LinkedHashMap inversés,
  HttpHeaders et MediaType Spring dans ClientController)
- crée les classes de représentation Keycloak manquantes :
  KeycloakUserRepresentation, KeycloakGroupRepresentation,
  KeycloakRoleRepresentation, KeycloakClientRepresentation,
  KeycloakTokenResponse (avec @JsonIgnoreProperties pour la désérialisation)
- ClientServiceImpl s'appuie désormais sur IdentityGateway (port métier)
  au lieu de KeycloakAdminClient : les méthodes françaises appelées
  (groupe, membresGroupe, supprimerGroupe, creerGroupe) existent sur le port
- KeycloakAdminClient : API RequestEntity alignée sur Spring Framework 7,
  en-tête Authorization (le jeton n'était jamais transmis), ID des
  créations lu depuis l'en-tête Location, suppression de
  java.util.collectors (paquet inexistant)
- KeycloakIdentityGateway : implémente les 13 méthodes du port IdentityGateway
  (creerGroupe retournait un Optional et ne compilait pas), résolution de
  l'UUID interne du client pour l'API des rôles
- câblage Spring : KeycloakConfig (RestTemplate + KeycloakAdminClient),
  @Component sur KeycloakIdentityGateway, préfixe @ConfigurationProperties
  aligné sur le yaml (keycloak.* au lieu de application.keycloak.*)
- tests : mock IdentityGateway dans ClientServiceImplTest, passerelle
  no-op profil test pour les IT (cf. commentaire application-test.yaml)
- synchronise les copies racine business/ et infrastructure/

Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>

* refactor: fiabilise la lecture des rôles et groupes Keycloak

Le listing et le détail d'un utilisateur renvoyés par l'API d'admin
Keycloak ne portent ni rôl